--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gulp-less": "^2.0.1",
     "gulp-minify-css": "^0.3.13",
     "gulp-nunjucks-render": "^0.1.3",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
     "gulp-uncss": "^0.5.2",
