--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp wordpress"
   },
   "repository": {
     "type": "git",
