--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-bower-src": "^0.1.0",
     "gulp-concat": "^2.4.3",
+    "gulp-filter": "^2.0.0",
     "gulp-less": "^2.0.1",
     "gulp-minify-css": "^0.3.13",
     "gulp-nunjucks-render": "^0.1.3",
