--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "gulp-uglify": "^1.0.2",
     "gulp-uncss": "^0.5.2",
     "lodash": "^3.0.0",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "bower": "^1.3.12"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "gulp",
+    "start": "bower install && gulp",
     "test": "gulp wordpress"
   },
   "repository": {
