--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bower": "^1.3.12",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-bower-src": "^0.1.0",
@@ -19,11 +20,11 @@
     "gulp-uglify": "^1.0.2",
     "gulp-uncss": "^0.5.2",
     "lodash": "^3.0.0",
-    "wiredep": "^2.2.2",
-    "bower": "^1.3.12"
+    "wiredep": "^2.2.2"
   },
   "devDependencies": {},
   "scripts": {
+    "postinstall": "bower install",
     "start": "gulp",
     "compile": "gulp compile"
   },
