--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-bower-src": "^0.1.0",
     "gulp-concat": "^2.4.3",
-    "gulp-filter": "^2.0.0",
+    "gulp-if": "^1.2.5",
     "gulp-less": "^2.0.1",
     "gulp-minify-css": "^0.3.13",
     "gulp-nunjucks-render": "^0.1.3",
     "gulp-prettify": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
-    "gulp-uncss": "^0.5.2",
     "lodash": "^3.0.0",
     "wiredep": "^2.2.2"
   },
